--- a/mvp-description.tex
+++ b/mvp-description.tex
@@ -135,15 +135,89 @@ This document defines the Minimal Viable Product (MVP) for the Cloak Service, fo
       \item Node.js v22 (NestJS)
       \item MongoDB
     \end{itemize}
-  \item Extensibility: filter pipeline is pluggable via dependency injection.
 \end{itemize}
 
+\newpage
 \section{Filter Logic}
 
-\section{Examples}
+The Cloak Service employs a layered approach to bot detection, where certain filters immediately flag a request as suspicious, assigning a verdict of "bot" with a score of 1, while others provide a more heuristic-based evaluation. This approach ensures both speed and accuracy in identifying automated traffic. Below is a detailed breakdown of the filter logic.
 
-\subsection{Sample Request}
+\subsection{Filters}
 
-\subsection{Sample Response}
+\begin{itemize}
+  \item \textbf{User-Agent Analysis:} 
+  Bots often attempt to impersonate legitimate users by modifying or omitting the User-Agent (UA) string. If the User-Agent is missing or matches known bot patterns, the request is immediately flagged as a bot. This results in a verdict of "bot" with a score of 1.
+
+  The condition is as follows:
+  \[
+  S_{\text{UA}} = 
+  \begin{cases} 
+    1 & \text{if UA is missing or matches known bot signature} \\
+    0 & \text{if UA is valid or ambiguous}
+  \end{cases}
+  \]
+  If \( S_{\text{UA}} = 1 \), the request is classified as a "bot" with a score of 1.
+
+  \item \textbf{Header Consistency Check:} 
+  Bots often fail to include essential headers like \texttt{Referer}, \texttt{Origin}, or \texttt{Accept-Language}, or provide invalid values. If any of these headers are missing or invalid, the request is immediately flagged as a bot.
+
+  The condition is as follows:
+  \[
+  H = 
+  \begin{cases}
+    0 & \text{if any critical header is missing or invalid} \\
+    1 & \text{if all required headers are present and valid}
+  \end{cases}
+  \]
+  If \( H = 0 \), the request is classified as a "bot" with a score of 1.
+
+  \item \textbf{Request Frequency:} 
+  Bots tend to send requests much more frequently than legitimate users. If the number of requests from the same IP exceeds a predefined threshold within a short time window, it is flagged as a bot.
+
+  Let \(N(t)\) represent the number of requests made within the time window of length \(t\) seconds. If \( N(t) > T \), where \(T\) is the threshold, the request is classified as a "bot" with a score of 1:
+  \[
+  N(t) > T \quad \Rightarrow \quad F = 1
+  \]
+  In this case, the request is classified as a "bot" with a score of 1.
+
+\item \textbf{IP Reputation:} 
+  The IP reputation check is a heuristic filter based on the score from an external service. We use free-tier IP reputation services to assess the likelihood that the incoming request’s IP address is associated with bot activity. The following external services are available for IP reputation checks:
+  \begin{itemize}
+    \item \url{https://ipqualityscore.com/} - Provides IP reputation data, fraud scoring, and bot detection.
+    \item \url{https://www.abuseipdb.com/} - Offers risk scores based on reported malicious activity from IPs.
+    \item \url{https://www.virustotal.com/} - Checks IP reputation based on threat intelligence from multiple sources.
+  \end{itemize}
+  
+  Each of these services provides a reputation score \( R_{IP} \), normalized between 0 and 1, where a higher score indicates a higher likelihood of the request originating from a bot. The first available service will be used to retrieve the reputation score for the incoming request’s IP address. If the first service is unavailable or the response is invalid, we proceed to the next available service, and so on, until a valid score is obtained.
+
+  However, if all the external services fail (e.g., due to network issues or API limits), we fall back to using a list of blocked IP addresses provided by the https://github.com/stamparm/ipsum/tree/master repository. The \textbf{ipsum} repository contains a list of IPs known to be associated with malicious activities. If the IP address matches any in this list (we can use child process for this), we consider it a bot.
+
+  The final IP reputation score is used as follows:
+  \[
+  R_{IP} \in [0, 1]
+  \]
+
+  \textbf{Note:} If the IP reputation score is low, or if all services fail (including the fallback to the \textbf{ipsum} repository), the request will not be immediately flagged as a bot. Other filters (e.g., User-Agent, Header Consistency, and Request Frequency) will be used to make a final determination.
+\end{itemize}
+
+\subsection{Final Verdict}
+
+Once all filters are applied, the final verdict is determined based on the results of the checks. If any of the immediate red flag filters (User-Agent, Header Consistency, or Request Frequency) are triggered, the request is classified as "bot" with a score of 1. Otherwise, the IP reputation score is considered, and the request is classified as a bot if the IP reputation score exceeds the threshold of the external service or if the score is 1. 
+
+The final verdict can be expressed as:
+\[
+\text{verdict} = 
+\begin{cases} 
+\text{bot} & \text{if } S_{\text{UA}} = 1 \text{ or } H = 0 \text{ or } F = 1 \text{ or } R_{IP} > T_{\text{service}} \\
+\text{not\_bot} & \text{otherwise}
+\end{cases}
+\]
+
+Where: \newline
+- \( S_{\text{UA}} \) is the result from the User-Agent analysis. \newline
+- \( H \) is the header consistency check result. \newline
+- \( F \) is the request frequency check result. \newline
+- \( R_{IP} \) is the reputation score from the external service, compared with \( T_{\text{service}} \).
+
 
 \end{document}
